src/test/run-pass/issue-2196.rs
// xfail-test
// aux-build:issue-2196-a.rs
// aux-build:issue-2196-b.rs
// aux-build:issue-2196-c.rc

use c(name = "issue2196c");
import c::t;

fn main() { }
